Upgrade build to Java 17 (Jetty 9.4, Weld 2.4)