@@ -5,17 +5,25 @@ This is an simple setup for testing CDI ([Red Hat JBoss Weld]
 (https://docs.jboss.org/weld/reference/latest/en-US/html/)) and Jetty using the 
 [jetty-maven-plugin](http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html)
 
-+ Jetty 9.2.5.v20141112
-+ Weld 2.2.7.Final (CDI 1.2)
++ Jetty 9.4.57.v20241219
++ Weld 2.4.8.Final (CDI 1.2)
 
 ### Running this example Application
 
-+ Check if Java 8 is used
++ Check if Java 17 is used
 + Clone this git repository
 + Go to project directory, `java8-examples`
 + Execute `mvn clean install`
 + Go to root directory of this subproject, `jetty-maven-cdi`
 + Start Jetty and go to `http://localhost:8080/` to view the result in your browser
+
+Weld 2.4 generates its client proxies with `ClassLoader.defineClass` via reflection, which
+is not accessible by default on Java 17, so `jetty:run` needs:
+
+````bash
+$ export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED"
+$ mvn jetty:run
+````
 
 ````bash
 $ mvn --version
@@ -61,7 +69,7 @@ are not consistent.
 ### How to setup a CDI enabled application?
 
 + Add `javax.enterprise:cdi-api:1.2`, scope `provided` to your (maven) dependencies
-+ Add `org.jboss.weld.servlet:weld-servlet:2.2.7.Final` as a dependency for
++ Add `org.jboss.weld.servlet:weld-servlet:2.4.8.Final` as a dependency for
 `jetty-maven-plugin`
 + Managed beans must have a default constructor and may not be `final` (must be proxiable)
 + Managed beans declaring a passivating scope must be passivation capable, 
